# opencv-cam-idx

./: README.md  example.py  pyproject.toml
opencv_cam_idx/: finder.py  moniker.py
