[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opencv-cam-idx"
version = "1.0.1"
dependencies = ["comtypes"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Find opencv camera index in windows using win32 api"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/opencv-cam-idx"
Issues = "https://github.com/sandbox-pokhara/opencv-cam-idx/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"opencv_cam_idx" = "opencv_cam_idx"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
